##################################################
# TSUBAKIの環境変数(★utf8で保存すること)
# $Id$
#
#
#
# 主な設定項目
# * 基本ツールのパス
# * キャッシュページ／標準フォーマット関係のパス
# * データベースのパス
# * 検索サーバー／スニペットサーバー関係（ホスト名、ポート番号等）
# * その他の設定
#
#
#
# 書式
# * KEY\tVALUE
# * KEY\tVALUE1,VALUE2,...（値が複数の時）
#   - サーバー関係の設定は特別な書式なので、各項目を参照のこと
# * 行頭が`#' の行はコメント
#
##################################################



##################################################
# 基本ツールの設定（★要変更）
##################################################

PERL	@PerlPath@
TOOL_HOME	/usr/local/bin
JUMAN_COMMAND	@JUMANPrefix@/bin/juman
JUMAN_RCFILE	@JUMANPrefix@/etc/jumanrc
KNP_COMMAND	@KNPPrefix@/bin/knp
KNP_RCFILE	@KNPPrefix@/etc/knprc
KNP_OPTIONS	-postprocess,-tab,-dpnd
SYNDB_PATH	@SynGraphPath@/syndb/@MachineType@
SYNGRAPH_PM_PATH	@SynGraphPath@/perl
MIDB_PATH	@CalcSimilarityByCFPath@/db/all-mi
WWW2SF_PATH	@WWW2sfPath@/tool/perl
UTILS_PATH	@UtilsPath@/perl
TSUBAKI_SCRIPT_PATH	@SearchEnginePath@/scripts
TSUBAKI_MODULE_PATH	@SearchEnginePath@/perl
WIKIPEDIA_ENTRY_DB	@SearchEnginePath@/data/wikipedia_entry_trie.db

# 英語版
ENGLISH_PARSER_DIR	@SearchEnginePath@/enju2tsubaki


##################################################
# データベース関係の設定
##################################################

# TITLEDB/URLDBを納めたディレクトリへのパス
TITLE_DB_PATH	@DocumentPath@/idx
URL_DB_PATH	@DocumentPath@/idx

# 単語・係り受け・同義表現・同義表現係り受けのDFDBを納めたディレクトリへのパス（★要変更）
SYNGRAPH_DFDB_PATH	@DocumentPath@/idx
COMPOUND_NOUN_DFDB_PATH	@SearchEnginePath@/data/cns.100M.cls.df1000.cdb


##################################################
# 検索サーバ/スニペットサーバの設定
##################################################

# サーバの状態のログを保存するファイルの指定
# サーバの設定に入る前に設定すること（サーバの設定後では反映されません）
SERVER_STATUS_LOG	@SearchEnginePath@/data/server_status

# 検索サーバの設定（★要変更）
# SEARCH_SERVERS	ホスト名	ポート番号	インデックスの場所	アンカーインデックスの場所(ない場合はnone)
SEARCH_SERVERS	@SearchServerHost@	@SearchServerPort@	@DocumentPath@/idx/0000	none
# SEARCH_SERVERS	second_server	@SearchServerPort@	@DocumentPath@/idx/0001	none
# SEARCH_SERVERS	third_server	@SearchServerPort@	@DocumentPath@/idx/0002	none

# スニペットサーバの設定（★要変更）
# SNIPPET_SERVERS	ホスト名	ポート番号	ディスクにおいてある標準フォーマットのID1,...
SNIPPET_SERVERS	@SnippetServerHost@	@SnippetServerPort@	0000
# SNIPPET_SERVERS	second_server	@SnippetServerPort@	0001
# SNIPPET_SERVERS	third_server	@SnippetServerPort@	0002


##################################################
# その他の設定
##################################################

# TSUBAKIの下に出すサブタイトル
# TSUBAKI_SUBTITLE	2010年度版

# 総文書数
NUMBER_OF_DOCUMENTS	100132750

# 平均文書長
AVERAGE_DOCUMENT_LENGTH	907.077

# 強調表示に用いる色
HIGHLIGHT_COLOR		ffffaa,ddffff,ffddff,ffbbbb,ddffdd,dd0000,00dd00,dddd00,00dddd,dd00dd

# 作業領域
WORKSPACE	/tmp/tsubaki

# ログファイル（★要変更）
LOG_FILE_PATH		@SearchEnginePath@/log/input.log

# マシンの故障等でサービスを停止する場合は1
SERVICE_STOP_FLAG	0

# 検索画面に表示するメッセージ
MESSAGE	0

# 近接制約のデフォルト値
DEFAULT_APPROXIMATE_DIST	100

# スニペットの長さ（デフォルトは80単語）
MAX_NUM_OF_WORDS_IN_SNIPPET	80

# タイトルの長さ（デフォルトは50文字）
MAX_LENGTH_OF_TITLE		50

# URLの長さ（デフォルトは100文字）
MAX_LENGTH_OF_URL		100

# タイトルからキャッシュページへのリンクをはるかどうか　はる(1)/はらない=元ページへのリンク(0)
LINK_CACHED_HTML_FROM_TITLE	1

# IDからキャッシュページへのパスを求める際のテンプレート（★要変更）
CACHED_HTML_PATH_TEMPLATE	@DocumentPath@/html/%04d/%06d/%s.html

# IDから標準フォーマットへのパスを求める際のテンプレート（★要変更）
XML_PATH_TEMPLATE	@DocumentPath@/xml/%04d/%06d/%s.xml
# IS_NICT_MODE: @DocumentPath@/xml/x%04d/x%07d/%s.xml

# index.cgiのアドレス（★要変更）
INDEX_CGI	./index.cgi

TSUBAKI_BASE_URL	http://nlpc06.ixnlp.nii.ac.jp/cgi-bin/tsubaki-develop

# キャッシュページへのリンクを生成する際に用いるテンプレート
CACHED_PAGE_ACCESS_TEMPLATE	cache=%09d

# 1ページに含まれる検索結果の数

NUM_OF_RESULTS_PER_PAGE	10

# ユーザが見れる検索結果数

NUM_OF_PROVIDE_SEARCH_RESULTS	500

# 通常検索で検索するページ数

NUM_OF_SEARCH_RESULTS	1000

# 近接ボーナスを考慮する際の単語数

NEAR_DISTANCE	30

# 検索表現同士に近接制約を適用するかどうか
FORCE_APPROXIMATE_BTW_EXPRESSIONS 0

# SYNGRAPH検索のON(0)/OFF(1)

DISABLE_SYNGRAPH_SEARCH	0

# SYNGRAPH検索においてSYNノードの係り受けを考慮するかどうか　しない(0)/する(1)

USE_OF_SYNGRAPH_DEPENDENCY	0

# SYNGRAPH検索において<上位語>を考慮するかどうか　しない(0)/する(1)

USE_OF_HYPERNYM	0

# SYNGRAPH検索において<反義語><否定>を考慮するかどうか　しない(0)/する(1)
# 朝ごはんに対する<s230:ディナー><反義語><否定>

USE_OF_NEGATION_AND_ANTONYM	1

# 同義語展開を行わないために、Wikipediaエントリの情報を付与するかどうか　しない(0)/する(1)
NO_ATTACH_SYNNODE_IN_WIKIPEDIA_ENTRY	0

# KWIC表示のON(0)/OFF(1)

DISABLE_KWIC_DISPLAY	0

KWIC_WINDOW_SIZE	20

CACHE_DIR		@SearchEnginePath@/cache

DUMY_LOCK_FILE		/tmp/lockfile.out

LOCK_FILE		/tmp/lockfile.in

# マスターサーバーが検索中の時、後続するリクエストがRETRYする回数
# 0を指定すると処理されるまでマスターサーバーにリトライしつづける 
MAX_NUM_OF_RETRY	5

# マスターサーバーが検索中の時、その終了を待たすに新しいリクエストを処理するかどうか(0: 処理しない, 1: 処理する)
DISABLE_REQUEST_SCHEDULING	0

# 索引表現に読みを考慮するかどうか（0:読みを考慮する, 1:読みを考慮しない）
IGNORE_YOMI			0

# 開発モードとして起動するか(0: サービスモード, 1: 開発モード)
DEVELOP_MODE	0

# アンケート収集を行う場合は1, そうでない場合は0
QUESTIONNAIRE	0

# アンケート収集CGIのアドレス
QUESTIONNARIE_CGI	http://tsubaki.ixnlp.nii.ac.jp/questionnarie.cgi

# スニペットサーバ上の標準フォーマットデータをAPIで配布するかどうか（0:配布しない, 1:配布する）
PROVIDE_SFDAT_ON_SNIPPET_SERVER	0

# キャッシュを利用しないようにする場合は1
DISABLE_CACHE	1

# アンカーインデックスを利用しないようにする場合は1
DISABLE_ANCHOR_INDEX	0

# 検索結果から除外すページの指定
# STOP_PAGE_LIST	/somewhere/stoppagelist


#######################################################################
# 混み具合を表示する場合は1, そうでない場合は0
# 1 の場合、LOADBALANCER_NAME, APACHE_ACCESS_LOG, DATA_DIR 設定すること
#######################################################################

DISPLAY_CONGESTION	     0

# apache のロードバランサーが起動しているサーバー
LOADBALANCER_NAME	nlpc01.ixnlp.nii.ac.jp

# apache の access_log ファイルの保存先
APACHE_ACCESS_LOG      /var/log/apache2/access_log

# SearchEngine/data ディレクトリの場所
DATA_DIR	       @SearchEnginePath@/data

# SynGraph/dic/rsk_iwanami 以下にある antonym.txt へのパス
ANTONYM_DIC_PATH	@SynGraphPath@/dic/rsk_iwanami/antonym.txt

# クエリ処理用サーバーを利用するかどうか（1：利用する，0：利用しない，デフォルト1）
USE_OF_QUERY_PARSE_SERVER	0

# クエリ処理用サーバーのホスト名（マスターサーバー上で解析する。マスターサーバーが分散化されていれば分散可）
HOST_OF_QUERY_PARSE_SERVER	localhost

# クエリ処理用サーバーのポート番号
PORT_OF_QUERY_PARSE_SERVER	60000

# クエリ処理に固有表現認識を利用するかどうか (1: 利用する, 0: 利用しない, デフォルト0)
# KNPがCRF付きでコンパイルされている必要がある
USE_OF_NE_FOR_QUERY_PROCESS	0

# クエリ処理にテリック処理を利用するかどうか (1: 利用する, 0: 利用しない, デフォルト0)
# MIDB_PATHとANTONYM_DIC_PATHが適切に設定されており、CalcSimilarityByCFがインストールされている必要がある
USE_OF_TELIC_FOR_QUERY_PROCESS	0

# 検索に利用するSynNodeの上限（0の場合は制限なし）
MAX_NUMBER_OF_SYNNODES		5

# メモリ監視サーバー用変数
# tsubaki_server.plがメモリを何%以上利用したらkillを行うか
MAX_RATE_OF_MEMORY_USE	20

# スレーブサーバーの状態のログ
SERVER_LOG_FILE	@SearchEnginePath@/log/tsubaki-slave-server.log

# インデックスデータからロードする文書データの最大数（0で全部,デフォルト0）
MAX_SIZE_OF_DOCS	0

# NICTで起動しているかどうか
IS_NICT_MODE	0

# PAGERANKを利用しない場合は1
DISABLE_PAGERANK	1

# スコアリング時のパラメータ
# score = WEIGHT_OF_TSUBAKI_SCORE * tsubaki_socre + (1 - WEIGHT_OF_TSUBAKI_SCORE) * pagerank * C_PAGERANK

WEIGHT_OF_TSUBAKI_SCORE	0.5

C_PAGERANK		10



# 京大病院モード
IS_KUHP_MODE	0


# 英語版かどうか
IS_ENGLISH_VERSION	@EnglishFlag@


# ブロックタイプを検索で利用するかどうか
USE_OF_BLOCK_TYPES		@UseBlockTypeFlag@

# ブロックタイプを選択するcheckboxを表示するかどうか
DISABLE_BLOCK_TYPE_DISPLAY	1

# ブロックタイプに関する情報を定義したファイル
BLOCK_TYPE_DEFINITION		@SearchEnginePath@/data/blocktype.WEB


# 係り受け素性を検索で利用するかどうか
USE_OF_DPND_FEATURES		0


# どのホストがどのSIDを持つデータを管理しているかを表す対応表
# SID_RANGE	@SearchEnginePath@/data/sid.range

# どのホストがどのSIDを持つデータを管理しているかを表す対応表(CDB)
# SID_CDB	@SearchEnginePath@/data/sid.range.cdb

# ハッシュ関数を利用して標準フォーマットが置いてあるノードを探すかどうか
USE_OF_HASH_FOR_SID_LOOKUP	0

# 省略解析結果を利用する／しないを選択するチェックボックスの表示
DISABLE_ANAPHORA_RESOLUTION_DISPLAY	1

# C++版かどうか
IS_CPP_MODE		1

# 関連語蒸留を呼んで表示するかどうか
DISABLE_CALL_WEBCLUSTERING	1
